# windows_ble_testing

./: README.md  pubspec.yaml
installers/: RA QA Tester.iss  RA_QA_Testing.iss  RA_QA_Testing_1.iss  myexe.iss
lib/: injection.dart  main.dart
lib/core/entities/: imu_entities.dart
lib/core/errors/: failures.dart
lib/core/localization/: app_translations.dart
lib/core/theme/: app_theme.dart
lib/core/widgets/: app_logo.dart
lib/features/qa_test/data/datasources/: ble_datasource.dart  excel_datasource.dart
lib/features/qa_test/data/repositories/: qa_repository_impl.dart
lib/features/qa_test/domain/repository/: qa_repository.dart
lib/features/qa_test/domain/usecases/: qa_usecases.dart
lib/features/qa_test/platform/: ble_platform_channel.dart
lib/features/qa_test/presentation/bloc/: qa_bloc.dart  qa_event.dart  qa_state.dart
lib/features/qa_test/presentation/pages/: qa_test_page.dart
lib/features/qa_test/presentation/widgets/: animated_icon_widget.dart  calibration_view.dart  device_input_card.dart  device_list_widget.dart  initial_screen.dart  results_bad_view.dart  results_fail_view.dart  results_pass_view.dart  results_view.dart  scanning_view.dart  shaking_view.dart  stop_modal.dart  testing_view.dart
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/plugins/ble_plugin/: CMakeLists.txt  ble_plugin.cpp  ble_plugin.h
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.h  main.cpp
